<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".register.RegisterActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_register"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingBottom="15dp"
        android:paddingTop="30dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_account"/>
        <EditText
            android:id="@+id/register_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:background="@drawable/transparent"
            android:hint="@string/hint_intput_register_account"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:textColorHint="#ccc"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#3000"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingBottom="15dp"
        android:paddingTop="30dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_password"/>
        <EditText
            android:id="@+id/register_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:layout_weight="5"
            android:background="@drawable/transparent"
            android:hint="@string/hint_input_password_at_least_8_words"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:textColorHint="#ccc"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#3000"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingBottom="15dp"
        android:paddingTop="30dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_password"/>
        <EditText
            android:id="@+id/register_repeat_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:layout_weight="5"
            android:background="@drawable/transparent"
            android:hint="@string/repeat_password"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:textColorHint="#ccc"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/message_code"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:hint="验证码"
            android:textColorHint="#ccc"
            android:textColor="@android:color/black"
            android:layout_marginLeft="50dp"/>

        <TextView
            android:id="@+id/get_message_code"
            android:layout_gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginLeft="30dp"
            android:text="获取短信验证码"
            android:textSize="18sp"
            android:textColor="@android:color/holo_purple"/>
    </LinearLayout>

    <Button
        android:id="@+id/register_btn_register"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_selector"
        android:text="@string/register_new_account"
        android:textColor="@android:color/white"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:text="@string/keko_live_terms"/>
</LinearLayout>