<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/icon_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="30dp"
            android:src="@mipmap/ic_launcher"
            android:layout_gravity="center_horizontal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingTop="15dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingBottom="15dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_account"
                android:gravity="center"
                android:layout_weight="1"/>
            <EditText
                android:id="@+id/login_account"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:layout_marginLeft="13dp"
                android:hint="@string/hint_input_account"
                android:background="@android:color/transparent"
                android:textColor="@android:color/black"
                android:textColorHint="#ccc"
                android:textSize="16sp"/>
        </LinearLayout>

        <View
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#3000"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingTop="15dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingBottom="15dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_password"
                android:gravity="center"
                android:layout_weight="1" />
            <EditText
                android:id="@+id/login_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="numberPassword"
                android:layout_marginLeft="13dp"
                android:layout_weight="4"
                android:hint="@string/hint_input_password"
                android:background="@android:color/transparent"
                android:textColor="@android:color/black"
                android:textColorHint="#ccc"
                android:textSize="16sp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="忘记密码"
            android:textColor="@android:color/holo_blue_light"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="7dp"
            android:layout_gravity="right"/>

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:background="@drawable/btn_selector"/>

        <Button
            android:id="@+id/login_btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_marginTop="10dp"
            android:background="@drawable/transparent"
            android:textColor="@android:color/holo_blue_dark"/>
    </LinearLayout>
</RelativeLayout>